<resources>
    <string name="app_name">IQUII Pokedex</string>
    <string name="title_pokedex">Pokedex</string>
    <string name="title_favorites">Favorites</string>
    <string name="pokemonimage">pokemonImage</string>
    <string name="pokemonId">#%1$04d</string>

    <string name="addedToFavorite">%s added to favorite successfully!</string>
    <string name="removedToFavorite">%s removed to favorite successfully!</string>
    <string name="error">Something went wrong!</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Sp. Attack</string>
    <string name="special_defense">Sp. Defense</string>
    <string name="speed">Speed</string>
    <string name="no_favorites">There\'s no favorites...</string>
    <string name="no_pokemon_found">No pokemon found here...</string>
</resources>